<resources>
    <string name="app_name">KidsBook</string>
    <string name="drawer_open">Select Item</string>
    <string name="drawer_close">KidsBook</string>
    <string name="section_animal">Animal</string>
    <string name="section_alphabet">Alphabet</string>
    <string name="selection_color">Color</string>
    <string name="section_vegetables">Vegetables</string>
    <string name="section_about_us">About Us</string>
    <string name="logo_aboutus">About Us</string>
    <string name="email">kaushik.rpk@gmail.com</string>
    <string name="Privacy_policy">Privacy policy</string>
    <string name="about_us_detail">KidsBook is application which help a kids to
        learn about different countries across the world, apart from it different
        zoo animal as well as alphabet too.If you have any query or question regarding
        information in application please mail us on below email address. </string>
    <string name="privacy_text">Your privacy always important to us.\n
        This privacy policy statement describes
        the information practices of KidsBooks and its affiliates.We are not
        sharing any data to any organization. All of data within application
        are collected from internet and different organization which may have false information.
        In such a case you can mail us so we can correct out collected information.
        All of the content we used within application are collected from below organization.
        We really thanks to such great organizations.  </string>
    <string name="link_alphabet">
        http://www.kids-pages.com\n
        http://www.kids-pages.com\n
        http://www.istockphoto.com\n
        http://www.freedigitalphotos.net</string>

    <string name="action_settings">Settings</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Enter CountryName</string>
</resources>


